--- a/.golangci.yml
+++ b/.golangci.yml
@@ -23,3 +23,10 @@ linters-settings:
       - prefix(github.com/alexeyco/yqlx)
     section-separators:
       - newLine
+
+issues:
+  exclude-rules:
+    - path: _test\.go
+      linters:
+        - goerr113
+        - funlen
